# CAGD-2021

./: .gitignore  .gitmodules  README.md  pack_hw.py
Homeworks/HW1-Interpolation/: polyEval.m  polyInterpolate.m  rbfEval.m  rbfInterpolate.m  testInterpolate.m  testInterpolateGui.m  testRBFInterpolate.m
Homeworks/HW10-Loop-Subdivision/: loop_subdivision_test.m
Homeworks/HW11-Surface-Parameterization/: findBoundary.m  readObj.m  tutte_test.asv  tutte_test.m
Homeworks/HW12-RBF-Deformation/: RBF_Deformation.asv  RBF_Deformation.m  glvu.7z
Homeworks/HW2-Bezier-de-Casteljau/: BezierCurveApp.cpp  BezierCurveApp.h  CMakeLists.txt  main.cpp
Homeworks/HW3-Bezier-Bernstein/: BezierCurveApp.cpp  BezierCurveApp.h  CMakeLists.txt  CommonMath.h
Homeworks/HW4-Differential-Geometry-Basics/: plot_question_2.m  plot_question_3.m
Homeworks/HW5-Bezier-Spline/: BezierSpline.cpp  BezierSpline.h  BezierSplineApp.cpp  BezierSplineApp.h  CMakeLists.txt  Common.h  main.cpp
Homeworks/HW6-B-Spline/: BSpline.cpp  BSpline.h  BSplineApp.cpp  BSplineApp.h  CMakeLists.txt  main.cpp
Homeworks/HW7-Polar-Form/: problems_1.py  problems_3.py
Homeworks/HW8-Rational-Splines/: BezierCurve.cpp  BezierCurve.h  BezierSpline.cpp  BezierSplineApp.cpp  BezierSplineApp.h  CMakeLists.txt  Common.h  HomeworkApp.cpp  HomeworkApp.h  main.cpp
Homeworks/HW8-Rational-Splines/MeowGL/: CMakeLists.txt  MeowGLMath.h  MeowGLRenderer.cpp  MeowGLRenderer.h  MeowGLShader.fs  (+1 more)
Homeworks/HW9-Spline-Surfaces/: prob1.m  prob1.py
Reports/: Homework1.md  Homework10.md  Homework11.md  Homework12.md  Homework2.md  Homework3.md  Homework5.md  Homework6.md  Homework7.md  Homework8.md  Homework9.md
Reports/Homework4/: report.tex
